--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "antd": "^5.9.4",
+    "mdb-react-ui-kit": "^6.3.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
@@ -21,6 +23,6 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
-    "tailwindcss": "^3"
+    "tailwindcss": "^3.3.3"
   }
 }
