--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.9.0",
-    "sass": "^1.69.0"
+    "sass": "^1.69.0",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10",
