--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.2",
     "react-icons": "^4.9.0",
     "sass": "^1.69.0",
     "swiper": "^10.3.1"
