--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
+    "react-flippy": "^1.1.0",
     "react-icons": "^4.9.0",
     "sass": "^1.69.0",
     "swiper": "^10.3.1"
