--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@material-tailwind/react": "^2.1.4",
     "antd": "^5.9.4",
     "mdb-react-ui-kit": "^6.3.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
-    "react-flippy": "^1.1.0",
     "react-icons": "^4.9.0",
     "sass": "^1.69.0",
     "swiper": "^10.3.1"
