--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.9.4",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
     "react-icons": "^4.9.0",
+    "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0",
     "sass": "^1.69.0",
     "swiper": "^10.3.1"
   },
