--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.9.4",
+    "axios": "^1.6.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
