--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.9.4",
     "axios": "^1.6.0",
+    "lottie-react": "^2.4.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
