--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -H 192.168.0.107",
+    "dev": "next dev",
     "build": "next build",
     "start": "next dev",
     "lint": "next lint"
