--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-fast-marquee": "^1.6.2",
     "react-icons": "^4.9.0",
     "react-redux": "^8.1.3",
+    "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
     "sass": "^1.69.0",
     "swiper": "^10.3.1"
